<resources>
    <string name="app_name">Share Your Cuisine</string>

    <string name="facebook_app_id">1048336895196616</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="user_email_text">Email:</string>
    <string name="user_pwd_text">Password:</string>
    <string name="user_confirm_pwd_text">Confirm password:</string>
    <string name="user_gender_text">Gender:</string>
    <string name="male_btn">Male</string>
    <string name="female_btn">Female</string>
    <string name="user_dob_text">Date of birth:</string>
    <string name="user_des_text">Description:</string>
    <string name="submit_btn">Submit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="user_nick_name_text">Nick name:</string>
    <string name="new_menu">New Menu</string>
    <string name="new_post">New Post</string>
    <string name="title_activity_single_post">SinglePostActivity</string>
    <string name="post_content_text">Post content:</string>
    <string name="activity_title_text">Title:</string>
    <string name="activity_address_text">Address:</string>
    <string name="activity_start_time">Start time:</string>
    <string name="new_activity">New Activity</string>
    <string name="activity_start_date_btn">Start date</string>
    <string name="activity_start_time_btn">Start time</string>
    <string name="activity_content_text">Content:</string>
    <string name="activity_end_time">End time:</string>
    <string name="activity_end_date_btn">End date</string>
    <string name="activity_end_time_btn">End time</string>
    <string name="activity_remain_to_be_set">Remain to be set</string>
    <string name="activity_city_text">City:</string>
    <string name="activity_state_text">State:</string>
    <string name="activity_zip_code_text">Zip code:</string>
    <string name="btn_comment">comment</string>
    <string name="join">Join</string>
    <string name="unjoin">UnJoin</string>
    <string name="activity_joined_by">Joined By:</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="log_in">Log In</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="menu_title">Menu title:</string>
    <string name="menu_display_img_text">Upload a display image:</string>
    <string name="menu_content_text">Menu content:</string>
    <string name="delete_menu">Delete menu</string>
    <string name="search_hint">Search</string>
    <string name="search_menu">Search menu</string>
    <string name="hot_menu_text">Latest menus:</string>
    <string name="hot_post_text">Latest posts:</string>
    <string name="hot_activity_text">Hot activities:</string>
    <string name="share_activity">Share Activity</string>
    <string name="share_menu">Share Menu</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="sign_up">Sign Up Here!</string>
    <string name="menu_text">Menus</string>
    <string name="post_text">Posts</string>
    <string name="hosted_activity_text">Hosted Activities</string>
    <string name="joined_activity_text">Joined Activities</string>
    <string name="joined_by_text">Joined By:</string>
    <string name="people_text">People</string>
    <string name="add_comment_btn_text">Send</string>
    <string name="commentsText">Comments:</string>
    <string name="menu_cooking_time_text">Cooking time:</string>
    <string name="delete_post">Delete post</string>
    <string name="user_img_text">Upload your avatar:</string>
</resources>
