<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/white"
        tools:context=".NewActivityActivity">
        <TextView
            android:id="@+id/activity_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_title_text"/>

        <EditText
            android:id="@+id/activity_title_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_title_text"
            android:ems="10"/>

        <TextView
            android:id="@+id/activity_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_title_value"
            android:layout_marginTop="20dp"
            android:text="@string/activity_address_text"/>

        <EditText
            android:id="@+id/activity_address_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_address_text"
            android:ems="10"/>

        <TextView
            android:id="@+id/activity_city_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_address_value"
            android:layout_marginTop="20dp"
            android:text="@string/activity_city_text" />

        <EditText
            android:id="@+id/activity_city_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_city_text"
            android:ems="5"/>

        <TextView
            android:id="@+id/activity_state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_address_value"
            android:layout_toRightOf="@+id/activity_city_value"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/activity_state_text"/>

        <EditText
            android:id="@+id/activity_state_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_state_text"
            android:layout_toRightOf="@+id/activity_city_value"
            android:layout_marginLeft="20dp"
            android:ems="5"/>

        <TextView
            android:id="@+id/activity_zip_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_city_value"
            android:text="@string/activity_zip_code_text"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/activity_zip_code_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_zip_code_text"
            android:ems="5"/>

        <TextView
            android:id="@+id/activity_start_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_zip_code_value"
            android:layout_marginTop="20dp"
            android:text="@string/activity_start_time"/>

        <Button
            android:id="@+id/activity_start_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_start_time_text"
            android:text="@string/activity_start_date_btn" />

        <TextView
            android:id="@+id/activity_start_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_start_time_text"
            android:layout_toRightOf="@+id/activity_start_date_btn"
            android:layout_marginTop="15dp"
            android:text="@string/activity_remain_to_be_set"/>

        <Button
            android:id="@+id/activity_start_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_start_date_btn"
            android:text="@string/activity_start_time_btn"/>

        <TextView
            android:id="@+id/activity_start_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_start_date_btn"
            android:layout_toRightOf="@+id/activity_start_time_btn"
            android:layout_marginTop="15dp"
            android:text="@string/activity_remain_to_be_set"/>

        <TextView
            android:id="@+id/activity_end_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_start_time_btn"
            android:layout_marginTop="20dp"
            android:text="@string/activity_end_time"/>

        <Button
            android:id="@+id/activity_end_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_end_time_text"
            android:text="@string/activity_end_date_btn"/>

        <TextView
            android:id="@+id/activity_end_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_end_time_text"
            android:layout_toRightOf="@+id/activity_end_date_btn"
            android:layout_marginTop="15dp"
            android:text="@string/activity_remain_to_be_set"/>

        <Button
            android:id="@+id/activity_end_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_end_date_btn"
            android:text="@string/activity_end_time_btn"/>

        <TextView
            android:id="@+id/activity_end_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_end_date_btn"
            android:layout_toRightOf="@+id/activity_end_time_btn"
            android:layout_marginTop="15dp"
            android:text="@string/activity_remain_to_be_set"/>

        <TextView
            android:id="@+id/activity_content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_end_time_btn"
            android:layout_marginTop="20dp"
            android:text="@string/activity_content_text"/>

        <EditText
            android:id="@+id/activity_content_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_content_text"
            android:ems="10"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_content_value"
            android:text="@string/submit_btn"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_content_value"
            android:layout_toRightOf="@+id/submit_btn"
            android:text="@string/cancel_btn"/>
    </RelativeLayout>
</ScrollView>