<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NewPostActivity">

    <TextView
        android:id="@+id/post_content_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_content_text"/>

    <EditText
        android:id="@+id/post_content_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_content_view"
        android:ems="10"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_content_value"
        android:text="@string/submit_btn"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_content_value"
        android:text="@string/submit_btn"/>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_content_value"
        android:layout_toRightOf="@+id/submit_btn"
        android:layout_marginLeft="20dp"
        android:text="@string/cancel_btn"/>

</RelativeLayout>