<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_email_text" />

    <EditText
        android:id="@+id/user_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="Toe@you.com"
        android:layout_below="@+id/user_email_text"
        android:layout_alignLeft="@+id/user_email_text"
        android:layout_alignStart="@+id/user_email_text"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp" />

    <TextView
        android:id="@+id/user_pwd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email_value"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_pwd_text"/>

    <EditText
        android:id="@+id/user_pwd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Password"
        android:layout_below="@+id/user_pwd_text"
        android:layout_alignLeft="@+id/user_pwd_text"
        android:layout_alignStart="@+id/user_pwd_text"
        android:layout_alignRight="@+id/user_email_value"
        android:layout_alignEnd="@+id/user_email_value" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn"
        bootstrap:bb_type="success"
        bootstrap:bb_size="small"
        android:paddingBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/user_pwd_value"
        android:layout_alignLeft="@+id/user_pwd_value"
        android:layout_alignStart="@+id/user_pwd_value"
        android:layout_alignRight="@+id/user_pwd_value"
        android:layout_alignEnd="@+id/user_pwd_value" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"
        bootstrap:bb_type="danger"
        bootstrap:bb_size="small"
        android:layout_below="@+id/submit_btn"
        android:layout_alignLeft="@+id/submit_btn"
        android:layout_alignStart="@+id/submit_btn"
        android:layout_alignRight="@+id/submit_btn"
        android:layout_alignEnd="@+id/submit_btn" />

</RelativeLayout>