<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/white"
        tools:context=".NewMenuActivity">

        <TextView
            android:id="@+id/menu_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"/>

        <EditText
            android:id="@+id/menu_title_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_title_text"
            android:background="@drawable/bg_edittext_selector"
            android:ems="10"/>

        <TextView
            android:id="@+id/menu_display_img_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_title_value"
            android:text="@string/menu_display_img_text"/>

        <ImageButton
            android:id="@+id/menu_display_img_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_display_img_text"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:maxWidth="60dp"
            android:src="@drawable/add_img_btn"/>

        <ImageView
            android:id="@+id/menu_display_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/menu_display_img_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/menu_content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_display_img"
            android:text="@string/menu_content_text"/>

        <EditText
            android:id="@+id/menu_content_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_content_text"
            android:background="@drawable/bg_edittext_selector"
            android:ems="10"/>

        <ImageButton
            android:id="@+id/menu_img_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_content_value"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:maxWidth="60dp"
            android:src="@drawable/add_img_btn"/>

        <ImageView
            android:id="@+id/menu_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/menu_img_button"
            android:layout_marginBottom="1dp" />

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/menu_img_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/menu_img"/>

        <Button
            android:id="@+id/submit_btn"
            style="@style/SubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_img_recycler_view"
            android:layout_marginTop="10dp"
            android:text="@string/submit_btn"/>

        <Button
            android:id="@+id/cancel_btn"
            style="@style/CancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu_img_recycler_view"
            android:layout_toRightOf="@+id/submit_btn"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel_btn"/>
    </RelativeLayout>

</ScrollView>