<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_email_text" />

    <EditText
        android:id="@+id/user_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="Toe@you.com"
        android:layout_below="@+id/user_email_text"
        android:layout_alignLeft="@+id/user_email_text"
        android:layout_alignStart="@+id/user_email_text"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp" />

    <TextView
        android:id="@+id/user_pwd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email_value"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_pwd_text"/>

    <EditText
        android:id="@+id/user_pwd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Password"
        android:layout_below="@+id/user_pwd_text"
        android:layout_alignLeft="@+id/user_pwd_text"
        android:layout_alignStart="@+id/user_pwd_text"
        android:layout_alignRight="@+id/user_email_value"
        android:layout_alignEnd="@+id/user_email_value" />

    <TextView
        android:id="@+id/user_confirm_pwd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_pwd_value"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_confirm_pwd_text"/>

    <EditText
        android:id="@+id/user_confirm_pwd_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Confirm Password"
        android:layout_below="@+id/user_confirm_pwd_text"
        android:layout_alignLeft="@+id/user_confirm_pwd_text"
        android:layout_alignStart="@+id/user_confirm_pwd_text"
        android:layout_alignRight="@+id/user_pwd_value"
        android:layout_alignEnd="@+id/user_pwd_value" />

    <TextView
        android:id="@+id/user_gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_confirm_pwd_value"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_gender_text"/>

    <RadioGroup
        android:id="@+id/btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/user_confirm_pwd_value"
        android:layout_marginTop="13dp"
        android:layout_toRightOf="@+id/user_gender_text">
        <RadioButton
            android:id="@+id/male_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_btn"/>
        <RadioButton
            android:id="@+id/female_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_btn"/>
    </RadioGroup>

    <TextView
        android:id="@+id/user_dob_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_gender_text"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="30dp"
        android:text="@string/user_dob_text" />

    <DatePicker
        android:id="@+id/dob_picker"
        android:calendarViewShown="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:layout_below="@+id/user_confirm_pwd_value"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="80dp">
    </DatePicker>

    <TextView
        android:id="@+id/user_des_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dob_picker"
        android:layout_marginLeft="30dp"
        android:text="@string/user_des_text" />


    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/user_des_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_dob_text"
        android:layout_toRightOf="@+id/user_des_text"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:inputType="textMultiLine"
        android:lines="4" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_des_value"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:text="@string/submit_btn"
        bootstrap:bb_type="success"
        bootstrap:bb_size="small" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_des_value"
        android:layout_toRightOf="@+id/submit_btn"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/cancel_btn"
        bootstrap:bb_type="danger"
        bootstrap:bb_size="small" />-->
    <!-- <TextView
         android:id="@+id/user_email_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
         android:text="@string/user_email_text" />
     <EditText
         android:id="@+id/user_email_value"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/user_email_text"
         android:layout_marginTop="15dp" />
     <TextView
         android:id="@+id/user_pwd_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_email_text"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="30dp"
         android:text="@string/user_pwd_text"/>
     <EditText
         android:id="@+id/user_pwd_value"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_email_text"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/user_pwd_text"/>
     <TextView
         android:id="@+id/user_confirm_pwd_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_pwd_text"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:text="@string/user_confirm_pwd_text"/>
     <EditText
         android:id="@+id/user_confirm_pwd_value"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_pwd_text"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/user_confirm_pwd_text" />
     <TextView
         android:id="@+id/user_gender_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_confirm_pwd_text"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
         android:text="@string/user_gender_text"/>
     <RadioGroup
         android:id="@+id/btn_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/user_confirm_pwd_text"
         android:layout_marginTop="23dp"
         android:layout_toRightOf="@+id/user_gender_text">
         <RadioButton
             android:id="@+id/male_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/male_btn"/>
         <RadioButton
             android:id="@+id/female_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/female_btn"/>
     </RadioGroup>
     <TextView
         android:id="@+id/user_dob_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_gender_text"
         android:layout_marginTop="55dp"
         android:layout_marginLeft="30dp"
         android:text="@string/user_dob_text" />
     <DatePicker
         android:id="@+id/dob_picker"
         android:calendarViewShown="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleX="0.7"
         android:scaleY="0.7"
         android:layout_below="@+id/user_confirm_pwd_text"
         android:layout_marginTop="12dp"
         android:layout_marginLeft="80dp">
     </DatePicker>
     <TextView
         android:id="@+id/user_des_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dob_picker"
         android:layout_marginLeft="30dp"
         android:text="@string/user_des_text" />
     <com.beardedhen.androidbootstrap.BootstrapEditText
         android:id="@+id/user_des_value"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_dob_text"
         android:layout_toRightOf="@+id/user_des_text"
         android:layout_marginTop="60dp"
         android:layout_marginLeft="10dp"
         android:inputType="textMultiLine"
         android:lines="4" />
     <com.beardedhen.androidbootstrap.BootstrapButton
         android:id="@+id/submit_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_des_value"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="80dp"
         android:text="@string/submit_btn"
         bootstrap:bb_type="success"
         bootstrap:bb_size="small" />
     <com.beardedhen.androidbootstrap.BootstrapButton
         android:id="@+id/cancel_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_des_value"
         android:layout_toRightOf="@+id/submit_btn"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:text="@string/cancel_btn"
         bootstrap:bb_type="danger"
         bootstrap:bb_size="small" />-->

</RelativeLayout>